--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "doctrine/common": "^2.6",
+    "doctrine/common": "^3.0",
     "doctrine/annotations": "^1.8"
   },
   "require-dev": {
@@ -33,7 +33,7 @@
     "phpmd/phpmd": "@stable",
     "squizlabs/php_codesniffer": "2.3.*",
     "sebastian/phpcpd": "*", 
-    "doctrine/orm": "~2.3",
+    "doctrine/orm": "^2.3",
     "vlucas/phpdotenv": "^2.5",
     "phpdocumentor/phpdocumentor": "^2.0"
   },
