--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "version": "2.2.1",
   "config": {
     "platform": {
-        "php": "7.1"
+      "php": "7.1"
     }
   },
   "authors": [
@@ -32,7 +32,7 @@
     "symfony/yaml": "~2.5",
     "phpmd/phpmd": "@stable",
     "squizlabs/php_codesniffer": "2.3.*",
-    "sebastian/phpcpd": "*", 
+    "sebastian/phpcpd": "*",
     "doctrine/orm": "^2.3",
     "vlucas/phpdotenv": "^2.5",
     "phpdocumentor/phpdocumentor": "^2.0"
@@ -40,13 +40,12 @@
   "autoload": {
     "psr-4": {
       "MercadoPago\\": [
-        "src/MercadoPago/",
-        "tests/",
-        "src/MercadoPago/Generic/",
-        "src/MercadoPago/Entities/",
-        "src/MercadoPago/Entities/Shared/"
+        "src/MercadoPago/"
       ]
-    }
+    },
+    "classmap": [
+      "tests/"
+    ]
   },
   "scripts": {
     "test": "./vendor/bin/phpunit tests",
@@ -57,6 +56,8 @@
       "type": "composer",
       "url": "https://packagist.org"
     },
-    { "packagist": false }
+    {
+      "packagist": false
+    }
   ]
 }
