--- a/composer.json
+++ b/composer.json
@@ -42,13 +42,17 @@
       "MercadoPago\\": [
         "src/MercadoPago/"
       ]
-    },
-    "classmap": [
-      "tests/"
-    ]
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "MercadoPago\\": [
+        "tests/"
+      ]
+    }
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit tests",
+    "test": "php vendor/phpunit/phpunit/phpunit tests",
     "generate-doc": "php phpDocumentor.phar --visibility=\"public,protected\" --template=\"responsive-twig\" --title=\"SDK Mercado Pago\" -d ./src/MercadoPaGo/Entities -t ./docs"
   },
   "repositories": [
